# ctxgen

./: .gitignore  README.md  ctxgen  pyproject.toml
src/ctxgen/: __init__.py  cli.py  core.py  main.py
src/ctxgen/utils/: colors.py  messages.py
